--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-    "short_name": "Career Finder",
-    "name": "Career Path Finder Web App",
+    "short_name": "Career Path Finder",
+    "name": "Career Path Finder",
     "icons": [
       {
-        "src": "icon-192x192.png",
+        "src": "icons/icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "icon-512x512.png",
+        "src": "icons/icon-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
     ],
-    "start_url": "/",
-    "background_color": "#ffffff",
+    "start_url": ".",
     "display": "standalone",
+    "background_color": "#ffffff",
     "theme_color": "#000000"
   }
   
