--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "react-scripts start",
     "client": "react-scripts start",
-    "server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -30,7 +29,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jeet-biswas.github.io/career-path-finder",
+  "homepage": "/career-path-finder",
+
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   }
