--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": ".",
+    "start_url": "/career-path-finder/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000"
