--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jeet-biswas.netlify.app/career-path-finder",
+  "homepage": "https://placement-path-finder.netlify.app",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-preset-react-app": "^10.0.1"
